# axum-prod

./: Cargo.toml  Dockerfile  Makefile  README.md  configuration.yaml  spec.yaml
.github/workflows/: audit.yml  general.yml  test.yml
configuration/: base.yaml  production.yaml
migrations/: 20240128134909_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  send_email.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
