[package]
name = "axum-prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum-prod"

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.33", default-features = false, features = ["clock"] }
config = "0.13.4"
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4"] }
