[package]
name = "axum-prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum-prod"

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.33", default-features = false, features = ["clock"] }
config = "0.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde-aux = "4.4.0"
sqlx = { version = "0.7.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.24"
once_cell = "1.19.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
